--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
