--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.3.0
   carousel_slider: ^4.2.1
   get: ^4.6.6
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
